HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicGenericMethodNonDispatchable/Expected.uv
//! Expected diagnostic metadata for the DynamicGenericMethodNonDispatchable rejected-source specimen.

expectedDiagnostic("E-TYP-2542", "def.14.DynamicDispatchEligibility")
